objects/DelegatedToken__c.object
<CustomObject>
    <fields>
        <fullName>RequestIP__c</fullName>
        <label>Request IP</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <externalId>true</externalId>
        <label>Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Delegated Token</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RequestIP__c</columns>
        <columns>Username__c</columns>
        <columns>Token__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DT{000000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delegated Tokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>